compiler/testData/diagnostics/tests/generics/varProjection/setterProjectedOutNoPlusAssign.kt
trait Tr<T> {
    var v: T
}

fun test(t: Tr<out String>) {
    <!SETTER_PROJECTED_OUT!>t.v<!> += null!!
}